# Whisperize

./: main.py  pyproject.toml  requirements.txt
backend/config/: CORS.py
backend/routes/: endpoints.py
dataset/: full_transcript.txt  transcription.txt
dataset/output/: dataset.json
dataset/summarized/bullet/: dataset_bullets.json  dataset_bullets.txt
dataset/summarized/normal/: dataset_summarized.json  dataset_summarized.txt
frontend/: main.html
notebook/: 01_test.ipynb  summary.txt
src/: audio_to_text.py  bullet_text.py  bullet_to_text.py  decorator.py  decorators.py  summarize.py
util/: recorder.py
