[project]
name = "audtio-to-text-summerizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "dataset>=1.6.2",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "openai-whisper>=20250625",
    "peft>=0.17.0",
    "pydub>=0.25.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "whisper>=1.1.10",
]
